--- a/NLSDepre/README
+++ b/NLSDepre/README
@@ -1,2 +1,3 @@
 Investigate the developmental neurological effects from prenatal exposure to inorganic arsenic
 Based on longitudinal data from the US National Logitudinal Survey Youth (NLSY) and US Geological Survey (USGS)
+Collaborator: Dr. Jaroslaw Harezlak from Department of Epidemiology at Indiana University Bloomington
